sfSandBoxCode/force-app/main/default/objects/FLO_Call__c/FLO_Call__c.object-meta.xml
<CustomObject>
    <description>Log cases from calls made by FLOs</description>
    <label>FLO Call</label>
    <nameField>
        <label>FLO Call Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FLO Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>