sfSandBoxCode/force-app/main/default/objects/FLO_Call__c/fields/auto_number__c.field-meta.xml
<CustomField>
    <fullName>auto_number__c</fullName>
    <description>Taro works form auto_number</description>
    <displayFormat>{0000}</displayFormat>
    <externalId>true</externalId>
    <label>auto number</label>
    <type>AutoNumber</type>
</CustomField>