sfSandBoxCode/force-app/main/default/objects/FLO_Call__c/fields/Complaints__c.field-meta.xml
<CustomField>
    <fullName>Complaints__c</fullName>
    <label>Complaints</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chamber not cleaned</fullName>
            </value>
            <value>
                <fullName>Toilet not sprayed</fullName>
            </value>
            <value>
                <fullName>Misalignment of squat plate</fullName>
            </value>
            <value>
                <fullName>Misalignment of waste containers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>