sfSandBoxCode/force-app/main/default/objects/FLO_Call__c/fields/Date_of_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Occurrence__c</fullName>
    <description>Date; when the incident happened</description>
    <label>Date of occurrence</label>
    <required>true</required>
    <type>Date</type>
</CustomField>