sfSandBoxCode/force-app/main/default/objects/FLO_Call__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>FLO Calls</relationshipLabel>
    <relationshipName>FLO_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>