sfSandBoxCode/force-app/main/default/objects/FLO_Call__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <length>200</length>
    <type>Text</type>
</CustomField>