sfSandBoxCode/force-app/main/default/objects/FLO_Call__c/fields/Respondent__c.field-meta.xml
<CustomField>
    <fullName>Respondent__c</fullName>
    <description>Name of the recording the information</description>
    <label>Respondent</label>
    <length>30</length>
    <type>Text</type>
</CustomField>