sfSandBoxCode/force-app/main/default/objects/FLO_Call__c/fields/specific_issue__c.field-meta.xml
<CustomField>
    <fullName>specific_issue__c</fullName>
    <description>The reason for the call</description>
    <label>Specific issue</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Late Waste Collection</fullName>
            </value>
            <value>
                <fullName>Waste not collected</fullName>
            </value>
            <value>
                <fullName>Discourteous  Fresh Life Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>